# safebag

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: pull_request_matrix.yml  release.yml
safebag/: __init__.py  _chain_proxy.py  _methods.py
tests/: test_chain_proxy.py
