[tool.poetry]
name = "safebag"
version = "0.1.7"
description = "Little python package implementing optional chaining"
authors = ["Alexandr Solovev <nightingale.alex.info@gmail.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/galeNightIn/safebag"
repository = "https://github.com/galeNightIn/safebag"
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = "^3.7"
pytest-cov = "^3.0.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
